--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-canvas {
+#myCanvas {
   background-color: #fff;
   margin-top: 30px;
   border: 10px solid rgb(50, 223, 185);
